--- a/basics/rochambeau01.html
+++ b/basics/rochambeau01.html
@@ -13,10 +13,37 @@
   <body>
     <p>Rock Paper Scissors</p>
 
-    <button onclick="const randomNumber = Math.random(); console.log(randomNumber);
-      if(randomNumber >= 0 && randomNumber < 1/3){console.log('rock');}
-      else if (randomNumber>= 1/3 && randomNumber < 2/3) {console.log('paper');}
-      else {console.log('scissors');}">
+    <button onclick="const randomNumber = Math.random(); 
+      let computerMove = '';
+      console.log(randomNumber);
+      if(randomNumber >= 0 && randomNumber < 1/3){
+        computerMove = 'rock';
+        console.log('rock');
+      }
+      else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+        computerMove = 'paper';
+        console.log('paper');
+      }
+      else {
+        computerMove = 'scissors';
+        console.log('scissors');
+      }
+      
+      console.log(computerMove);
+
+      let result = '';
+
+      if(computerMove === 'rock'){
+        result = 'Tie.';
+      }
+      else if(computerMove === 'paper'){
+        result = 'You loose.';
+      }
+      else if(computerMove === 'scissors'){
+        result = 'You win.';
+      }
+      alert(result);
+    ">
       Rock
     </button>
 
