--- a/basics/rochambeau01.html
+++ b/basics/rochambeau01.html
@@ -28,8 +28,6 @@
         computerMove = 'scissors';
         console.log('scissors');
       }
-      
-      console.log(computerMove);
 
       let result = '';
 
@@ -42,20 +40,111 @@
       else if(computerMove === 'scissors'){
         result = 'You win.';
       }
-      alert(result);
+      alert(`You picked rock. Computer picked ${computerMove} ${result}`);
     ">
       Rock
     </button>
 
-    <button onclick="">
+    <button onclick="
+      const randomNumber = Math.random(); 
+      let computerMove = '';
+      console.log(randomNumber);
+      if(randomNumber >= 0 && randomNumber < 1/3){
+        computerMove = 'rock';
+        console.log('rock');
+      }
+      else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+        computerMove = 'paper';
+        console.log('paper');
+      }
+      else {
+        computerMove = 'scissors';
+        console.log('scissors');
+      }
+
+      let result = '';
+
+      if(computerMove === 'rock'){
+        result = 'You win.';
+      }
+      else if(computerMove === 'paper'){
+        result = 'Tie.';
+      }
+      else if(computerMove === 'scissors'){
+        result = 'You loose.';
+      }
+
+      alert(`You picked paper. Computer picked ${computerMove} ${result}`);
+    ">
       Paper
+      Scissors
     </button>
 
-    <button onclick="">
+    <button onclick="
+    const randomNumber = Math.random(); 
+    let computerMove = '';
+    console.log(randomNumber);
+    if(randomNumber >= 0 && randomNumber < 1/3){
+      computerMove = 'rock';
+      console.log('rock');
+    }
+    else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+      computerMove = 'paper';
+      console.log('paper');r
+    }
+    else {
+      computerMove = 'scissors';
+      console.log('scissors');
+    }
+
+    let result = '';
+
+    if(computerMove === 'rock'){
+      result = 'You lose.';
+    }
+    else if(computerMove === 'paper'){
+      result = 'You win.';
+    }
+    else if(computerMove === 'scissors'){
+      result = 'Tie.';
+    }
+
+    alert(`You picked scissors. Computer picked ${computerMove} ${result}`);
+  ">
       Scissors
     </button>
 
     <script>
+      const randomNumber = Math.random(); 
+      let computerMove = '';
+      console.log(randomNumber);
+      if(randomNumber >= 0 && randomNumber < 1/3){
+        computerMove = 'rock';
+        console.log('rock');
+      }
+      else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+        computerMove = 'paper';
+        console.log('paper');
+      }
+      else {
+        computerMove = 'scissors';
+        console.log('scissors');
+      }
+
+      let result = '';
+
+      if(computerMove === 'rock'){
+        result = 'You win.';
+      }
+      else if(computerMove === 'paper'){
+        result = 'Tie.';
+      }
+      else if(computerMove === 'scissors'){
+        result = 'You loose.';
+      }
+
+      alert(`You picked paper. Computer picked ${computerMove} ${result}`);
+    
 
 
     </script>
