--- a/basics/rochambeau01.html
+++ b/basics/rochambeau01.html
@@ -14,67 +14,67 @@
     <p>Rock Paper Scissors</p>
 
     <button onclick="const randomNumber = Math.random(); 
-      let computerMove = '';
+      let userMove = '';
       console.log(randomNumber);
       if(randomNumber >= 0 && randomNumber < 1/3){
-        computerMove = 'rock';
+        userMove = 'rock';
         console.log('rock');
       }
       else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-        computerMove = 'paper';
+        userMove = 'paper';
         console.log('paper');
       }
       else {
-        computerMove = 'scissors';
+        userMove = 'scissors';
         console.log('scissors');
       }
 
       let result = '';
 
-      if(computerMove === 'rock'){
+      if(userMove === 'rock'){
         result = 'Tie.';
       }
-      else if(computerMove === 'paper'){
+      else if(userMove === 'paper'){
         result = 'You loose.';
       }
-      else if(computerMove === 'scissors'){
+      else if(userMove === 'scissors'){
         result = 'You win.';
       }
-      alert(`You picked rock. Computer picked ${computerMove} ${result}`);
+      alert(`You picked rock. Computer picked ${userMove} ${result}`);
     ">
       Rock
     </button>
 
     <button onclick="
       const randomNumber = Math.random(); 
-      let computerMove = '';
+      let userMove = '';
       console.log(randomNumber);
       if(randomNumber >= 0 && randomNumber < 1/3){
-        computerMove = 'rock';
+        userMove = 'rock';
         console.log('rock');
       }
       else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-        computerMove = 'paper';
+        userMove = 'paper';
         console.log('paper');
       }
       else {
-        computerMove = 'scissors';
+        userMove = 'scissors';
         console.log('scissors');
       }
 
       let result = '';
 
-      if(computerMove === 'rock'){
+      if(userMove === 'rock'){
         result = 'You win.';
       }
-      else if(computerMove === 'paper'){
+      else if(userMove === 'paper'){
         result = 'Tie.';
       }
-      else if(computerMove === 'scissors'){
+      else if(userMove === 'scissors'){
         result = 'You loose.';
       }
 
-      alert(`You picked paper. Computer picked ${computerMove} ${result}`);
+      alert(`You picked paper. Computer picked ${userMove} ${result}`);
     ">
       Paper
       Scissors
@@ -82,68 +82,68 @@
 
     <button onclick="
     const randomNumber = Math.random(); 
-    let computerMove = '';
+    let userMove = '';
     console.log(randomNumber);
     if(randomNumber >= 0 && randomNumber < 1/3){
-      computerMove = 'rock';
+      userMove = 'rock';
       console.log('rock');
     }
     else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-      computerMove = 'paper';
-      console.log('paper');r
+      userMove = 'paper';
+      console.log('paper');
     }
     else {
-      computerMove = 'scissors';
+      userMove = 'scissors';
       console.log('scissors');
     }
 
     let result = '';
 
-    if(computerMove === 'rock'){
+    if(userMove === 'rock'){
       result = 'You lose.';
     }
-    else if(computerMove === 'paper'){
+    else if(userMove === 'paper'){
       result = 'You win.';
     }
-    else if(computerMove === 'scissors'){
+    else if(userMove === 'scissors'){
       result = 'Tie.';
     }
 
-    alert(`You picked scissors. Computer picked ${computerMove} ${result}`);
+    alert(`You picked scissors. Computer picked ${userMove} ${result}`);
   ">
       Scissors
     </button>
 
     <script>
       const randomNumber = Math.random(); 
-      let computerMove = '';
+      let userMove = '';
       console.log(randomNumber);
       if(randomNumber >= 0 && randomNumber < 1/3){
-        computerMove = 'rock';
+        userMove = 'rock';
         console.log('rock');
       }
       else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-        computerMove = 'paper';
+        userMove = 'paper';
         console.log('paper');
       }
       else {
-        computerMove = 'scissors';
+        userMove = 'scissors';
         console.log('scissors');
       }
 
       let result = '';
 
-      if(computerMove === 'rock'){
+      if(userMove === 'rock'){
         result = 'You win.';
       }
-      else if(computerMove === 'paper'){
+      else if(userMove === 'paper'){
         result = 'Tie.';
       }
-      else if(computerMove === 'scissors'){
+      else if(userMove === 'scissors'){
         result = 'You loose.';
       }
 
-      alert(`You picked paper. Computer picked ${computerMove} ${result}`);
+      alert(`You picked paper. Computer picked ${userMove} ${result}`);
     
 
 
