--- a/basics/functions01.html
+++ b/basics/functions01.html
@@ -14,62 +14,64 @@
     <p>Examples of Javascript function calls for Rochembo</p>
 
     <button onclick="
-      pickComputerMove();
+      moveCopy = pickComputerMove();
 
-      if(computerMove === 'rock'){
+      if(moveCopy === 'rock'){
         result = 'Tie.';
       }
-      else if(computerMove === 'paper'){
+      else if(moveCopy === 'paper'){
         result = 'You loose.';
       }
-      else if(computerMove === 'scissors'){
+      else if(moveCopy === 'scissors'){
         result = 'You win.';
       }
 
-      alert(`You picked rock. Computer picked ${computerMove} ${result}`);
+      alert(`You picked rock. Computer picked ${moveCopy} ${result}`);
     ">Rock</button>
 
 
     <button onclick="
-      pickComputerMove();
+      moveCopy = pickComputerMove();
 
-      if(computerMove === 'rock'){
+      if(moveCopy === 'rock'){
         result = 'You win.';
       }
-      else if(computerMove === 'paper'){
+      else if(moveCopy === 'paper'){
         result = 'Tie.';
       }
-      else if(computerMove === 'scissors'){
+      else if(moveCopy === 'scissors'){
         result = 'You loose.';
       }
 
-      alert(`You picked paper. Computer picked ${computerMove} ${result}`);
+      alert(`You picked paper. Computer picked ${moveCopy} ${result}`);
     ">Paper</button>
 
 
     <button onclick="  
-      pickComputerMove();
+      moveCopy = pickComputerMove();
 
-      if(computerMove === 'rock'){
+      if(moveCopy === 'rock'){
         result = 'You lose.';
       }
-      else if(computerMove === 'paper'){
+      else if(moveCopy === 'paper'){
         result = 'You win.';
       }
-      else if(computerMove === 'scissors'){
+      else if(moveCopy === 'scissors'){
         result = 'Tie.';
       }
 
-      alert(`You picked scissors. Computer picked ${computerMove} ${result}`);
+      alert(`You picked scissors. Computer picked ${moveCopy} ${result}`);
     ">Scissors</button>
 
     <script>
-      let computerMove = '';
+
       let result = '';
+      let moveCopy = '';
 
       function pickComputerMove(){
 
         const randomNumber = Math.random(); 
+        let computerMove = '';
 
         console.log(randomNumber);
         if(randomNumber >= 0 && randomNumber < 1/3){
@@ -84,6 +86,8 @@
           computerMove = 'scissors';
           console.log('scissors');
         }
+
+        return computerMove;
       }
     </script>
 
